tests/check/illegal_return.co
// RUN: choreo %s 2>&1 | FileCheck %s

__co__ auto legal_ret1() {
  return 1; // legal
}

__co__ auto legal_ret2() {
  f32 [3] a;
  return a; // legal
}

__co__ auto illegal_ret3(f32 [1, 2, 3] a) {
   with tiling in [1, 2, 3] {
     f = dma.copy a.chunkat(tiling) => local;
     return f;
   }
}

// CHECK: error: returning value with type 'sync=>local f32 mdspan<3> []' is not supported.

__co__ auto illegal_ret4() {
  a = dma.any;
  return a; // illegal
}

// CHECK: error: returning value with type 'placeholder<FUTURE>' is not supported.

__co__ auto illegal_ret5() {
  a = {1};
  return a; // illegal
}

// CHECK: error: returning value with type 'ituple<1>' is not supported.

__co__ auto illegal_ret6(s16 [M] b) {
  with index in b.span {
    return index; // illegal
  }
}

// CHECK: error: returning value with type '{int}->[]' is not supported.
